test/integration/bad/missing_dist_suffix/stanc.expected
  $ ../../../../../install/default/bin/stanc lpmf_lpdf_replacement1.stan
Semantic error in 'lpmf_lpdf_replacement1.stan', line 5, column 14 to column 34:
   -------------------------------------------------
     3:  model {  
     4:      // known family, known suffix, not implemented  
     5:      target += binomial_lpdf(1|0,1);
                       ^
     6:  }
   -------------------------------------------------

Function 'binomial_lpdf' is not implemented for distribution 'binomial', use 'binomial_lpmf' instead.
  $ ../../../../../install/default/bin/stanc lpmf_lpdf_replacement2.stan
Semantic error in 'lpmf_lpdf_replacement2.stan', line 5, column 14 to column 32:
   -------------------------------------------------
     3:  model {  
     4:      // known family, known suffix, not implemented  
     5:      target += normal_lpmf(1|0,1);
                       ^
     6:  }
   -------------------------------------------------

Function 'normal_lpmf' is not implemented for distribution 'normal', use 'normal_lpdf' instead.
  $ ../../../../../install/default/bin/stanc non_existing_distribution_suffix1.stan
Semantic error in 'non_existing_distribution_suffix1.stan', line 4, column 14 to column 34:
   -------------------------------------------------
     2:  }
     3:  model {  
     4:      target += von_mises_cdf(1|0,1);
                       ^
     5:  }
   -------------------------------------------------

Function 'von_mises_cdf' is not implemented for distribution 'von_mises'.
  $ ../../../../../install/default/bin/stanc non_existing_distribution_suffix2.stan
Semantic error in 'non_existing_distribution_suffix2.stan', line 4, column 14 to column 35:
   -------------------------------------------------
     2:  }
     3:  model {  
     4:      target += von_mises_lcdf(1|0,1);
                       ^
     5:  }
   -------------------------------------------------

Function 'von_mises_lcdf' is not implemented for distribution 'von_mises'.
  $ ../../../../../install/default/bin/stanc non_existing_distribution_suffix3.stan
Semantic error in 'non_existing_distribution_suffix3.stan', line 4, column 14 to column 36:
   -------------------------------------------------
     2:  }
     3:  model {  
     4:      target += von_mises_lccdf(1|0,1);
                       ^
     5:  }
   -------------------------------------------------

Function 'von_mises_lccdf' is not implemented for distribution 'von_mises'.
  $ ../../../../../install/default/bin/stanc non_existing_distribution_suffix4.stan
Semantic error in 'non_existing_distribution_suffix4.stan', line 4, column 14 to column 41:
   -------------------------------------------------
     2:  }
     3:  model {  
     4:      target += von_mises_notasuffix(1|0,1);
                       ^
     5:  }
   -------------------------------------------------

Only functions with names ending in _lpdf, _lupdf, _lpmf, _lupmf, _cdf, _lcdf, _lccdf can make use of conditional notation.
